--- a/_posts/2015-12-31-WTF.md
+++ b/_posts/2015-12-31-WTF.md
@@ -1,3 +1,3 @@
 
 <br/>
-1학년 입학할 때 영어 과목을 waive받아서 면제됐는데 면제받은 과목도 수강신청을 해야 전공진입이 가능한 것이었다고 한다... A
+1학년 입학할 때 영어 과목을 waive받아서 면제됐는데 면제받은 과목도 수강신청을 해야 전공진입이 가능한 것이었다고 한다... Aㅏ... 
