--- a/_posts/2015-12-31-IMG_Test.md
+++ b/_posts/2015-12-31-IMG_Test.md
@@ -3,7 +3,7 @@ layout: post
 ---
 #Testing Resources
 
-<img src="/Resources/2015-12-31/InstallingHomeBrew.png" class="l-img">
+<img src="/Resources/2015-12-31/InstallingHomeBrew.png" width="100px" class="l-img">
 While Installing HomeBrew
 
 <img src="/Resources/2015-12-31/Thunderstorm.png" class="r-img">Thunderstorm icon
