--- a/_posts/2015-12-31-Tethnic_5th.md
+++ b/_posts/2015-12-31-Tethnic_5th.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 ---
 <br/><div style="text-align:center">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kCAgGt-Va-c" frameborder="0" allowfullscreen></iframe>
