--- a/_posts/2016-02-09-Images.md
+++ b/_posts/2016-02-09-Images.md
@@ -2,6 +2,6 @@
 layout: post
 title: Images test
 ---
-![http://www.amazon.com/dp/B00Q2VIW9M/ref=psdc_172541_t1_B00Q30A1RI](/2016-02-09/Bluedio Turbine T2.jpg)
+![](/2016-02-09/Bluedio Turbine T2.jpg)
 
 사진 테스트
