--- a/_posts/2016-02-09-Images.md
+++ b/_posts/2016-02-09-Images.md
@@ -2,6 +2,6 @@
 layout: post
 title: Images test
 ---
-![](/2016-02-09/Bluedio Turbine T2.jpg)
+![](/images/2016-02-09/Bluedio Turbine T2.jpg)
 
 사진 테스트
