--- a/_posts/2016-02-08-test.md
+++ b/_posts/2016-02-08-test.md
@@ -6,3 +6,5 @@ published: true
 Suddenly posts are not showing up. This post is only for test purpose.
 
 Test update
+
+![](/images/2016-02-09/Bluedio Turbine T2.jpg)
