--- a/_posts/2016-02-08-test.md
+++ b/_posts/2016-02-08-test.md
@@ -2,6 +2,8 @@
 layout: post
 title: test
 published: true
+tag:
+ - test
 ---
 Suddenly posts are not showing up. This post is only for test purpose.
 
