--- a/_posts/2016-02-08-test.md
+++ b/_posts/2016-02-08-test.md
@@ -12,20 +12,20 @@ Sound test
 
 </head>
 <body>
-    <script type="text/javascript" src="player/js/mootools-cnet-debug.js"></script> 
-    <script type="text/javascript" src="player/js/mootools-1.2.4-core.js "></script>
-    <script type="text/javascript" src="player/js/IdleTimer.js"></script>
-    <script type="text/javascript" src="player/js/AudioCheck-nc.js"></script>
-    <script type="text/javascript" src="player/js/mtAudioPlayer-nc.js"></script>
-    <script type="text/javascript" src="player/js/mtAudioPlayerUI-nc.js"></script>
-    <script type="text/javascript" src="player/js/mtAudioPlaylist-nc.js"></script>
+    <script type="text/javascript" src="/player/js/mootools-cnet-debug.js"></script> 
+    <script type="text/javascript" src="/player/js/mootools-1.2.4-core.js "></script>
+    <script type="text/javascript" src="/player/js/IdleTimer.js"></script>
+    <script type="text/javascript" src="/player/js/AudioCheck-nc.js"></script>
+    <script type="text/javascript" src="/player/js/mtAudioPlayer-nc.js"></script>
+    <script type="text/javascript" src="/player/js/mtAudioPlayerUI-nc.js"></script>
+    <script type="text/javascript" src="/player/js/mtAudioPlaylist-nc.js"></script>
     <style type="text/css" media="screen">
         #mooTunes{
             margin:0 auto 100px;
             width:300px;
         }
     </style>
-    <link rel="stylesheet" href="player/css/mooTunes/mooTunes-nc.css" type="text/css" media="screen" title="mtAudio Player Style Sheet" charset="utf-8" />
+    <link rel="stylesheet" href="/player/css/mooTunes/mooTunes-nc.css" type="text/css" media="screen" title="mtAudio Player Style Sheet" charset="utf-8" />
     <script type="text/javascript" charset="utf-8">
         var mooTunes, playlist, mtPlayer, tinyToggle, tinyToggleTimer;
 
@@ -42,7 +42,7 @@ Sound test
                 return;
             }
             
-           playlist = [ {artist : "레브(Reve)", mp3:"Resources/2016-02-10/바람의 꽃이 되어서.mp3",}
+           playlist = [ {artist : "레브(Reve)", mp3:"/Resources/2016-02-10/바람의 꽃이 되어서.mp3",}
                         ];
      
 
