--- a/_posts/2016-03-10-Alfred_2.8.3_update.md
+++ b/_posts/2016-03-10-Alfred_2.8.3_update.md
@@ -10,8 +10,8 @@ published: true
 
 ### [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)
 10th Mar 2016
- •	Maintenance release with a few little under the hood enhancements
- •	Fix iTunes Mini Player non-functional path when "hide mini player after selecting" is unselected
- •	Fix graphical glitch in Terminal prefs when switching from "Custom" to "Terminal"
- •	Fix "Search in Spotlight" mod action silently failing with multiple words for fallback searches
- •	Fix when viewing snippets in clipboard viewer, the preview subtext doesn't update on changing selection
+- Maintenance release with a few little under the hood enhancements
+- Fix iTunes Mini Player non-functional path when "hide mini player after selecting" is unselected
+ - Fix graphical glitch in Terminal prefs when switching from "Custom" to "Terminal"
+ - Fix "Search in Spotlight" mod action silently failing with multiple words for fallback searches
+ - Fix when viewing snippets in clipboard viewer, the preview subtext doesn't update on changing selection
