Alfred 2.8.3 update release note

--- a/_posts/2016-03-10-Alfred_2.8.3_update.md
+++ b/_posts/2016-03-10-Alfred_2.8.3_update.md
@@ -8,11 +8,10 @@ published: true
 ---
 ## Alfred 2.8.3 update
 
-### [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)
-10th Mar 2016
+### [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)<em>10th Mar 2016</em>
 
 - Maintenance release with a few little under the hood enhancements
 - Fix iTunes Mini Player non-functional path when "hide mini player after selecting" is unselected
- - Fix graphical glitch in Terminal prefs when switching from "Custom" to "Terminal"
- - Fix "Search in Spotlight" mod action silently failing with multiple words for fallback searches
- - Fix when viewing snippets in clipboard viewer, the preview subtext doesn't update on changing selection
+- Fix graphical glitch in Terminal prefs when switching from "Custom" to "Terminal"
+- Fix "Search in Spotlight" mod action silently failing with multiple words for fallback searches
+- Fix when viewing snippets in clipboard viewer, the preview subtext doesn't update on changing selection
