Alfred 2.8.3 update release note

--- a/_posts/2016-03-10-Alfred_2.8.3_update.md
+++ b/_posts/2016-03-10-Alfred_2.8.3_update.md
@@ -8,7 +8,7 @@ published: true
 ---
 ## Alfred 2.8.3 update
 
-### [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)<em style="font-size:0.7em">10th Mar 2016</em>
+### [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)<p style="font-size:0.7em">10th Mar 2016</p>
 
 - Maintenance release with a few little under the hood enhancements
 - Fix iTunes Mini Player non-functional path when "hide mini player after selecting" is unselected
