Alfred 2.8.3 update release note

--- a/_posts/2016-03-10-Alfred_2.8.3_update.md
+++ b/_posts/2016-03-10-Alfred_2.8.3_update.md
@@ -11,7 +11,8 @@ published: true
 #p01 {
     font-size: 70%;
 }
-## [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)<p id="p01">10th Mar 2016</p>
+## [2.8.3](https://www.alfredapp.com/changelog/#2.8.3)
+10th Mar 2016
 </style>
 - Maintenance release with a few little under the hood enhancements
 - Fix iTunes Mini Player non-functional path when "hide mini player after selecting" is unselected
