--- a/_posts/2016-04-06-1password_6.2.md
+++ b/_posts/2016-04-06-1password_6.2.md
@@ -6,6 +6,68 @@ tags:
  - update
 published: true
 ---
+
+1Password for Mac 6.2를 이용할 수 있습니다.
+
+# 6.2
+
+## 새로운 기능
+
+- 라스트패스에서 데이터 가져오기 기능
+- AgileBits Store에서 구매한 버전) 처음 실행할 때 iCloud에서 데이터 복구하기 기능
+- 새로운 로그인 기록을 만들 경우, 웹페이지의 제목과 도메인 이름으로부터 적절한 제목을 붙이도록 시도합니다.
+
+## 개선
+
+- 개인 보관함에서 1Password Team이나 Families로 항목을 이동할 경우 아이콘도 같이 이동합니다.
+- 1Password가 문서를 복호화 하기 전 확인을 요구합니다.
+- 즐겨찾기 한 항목을 개인 보관함으로 이동할 경우 즐겨찾기 상태가 여전히 유지됩니다.
+- 사용자 이름 항목이 비활성화 되어 있거나 비어있을 경우, 1Password는 더 이상 억지로 채우려 시도하지 않습니다.
+- 1Password가 신용카드와 개인정보 항목을 더 정확히 채워 넣습니다.
+- 로그인 항목을 더 정확히 채워 넣습니다.
+- 복수의 문서를 동시에 1Password 계정에 추가할 경우, 1Password는 어느 문서를 업로드하고 어느 문서를 대기열에 넣는지 알려줍니다.
+- 브라우저 설정이 이해하기 쉬워졌슶니다.
+- 은행계좌, 이메일, 와이파이 카테고리는 이제 기본적으로 문서 항목의 하위항목으로 분류됩니다.
+- 1Password mini의 모든 보관함의 아이콘으로 1Password의 아이콘이 사용됩니다.
+- 1Password Team의 설정 화면에서 비밀번호 변경 텍스트를 개선했습니다.
+- 1Password mini에서의 검색이 더 빨라졌습니다.
+- Crowdin의 번역을 갱신했습니다.
+
+## 문제해결
+
+- 메뉴 바 아이콘을 클릭했을 때 얼어버리는 것처럼 보이는 증상 해결
+- 복수의 활성화된 크롬 프로파일이나 숨김화면으로 인해 키보드 단축키가 비정상적으로 작동하는 문제 해결
+- 로그인 저장 윈도우에서 태그가 자동으로 나타나는 비정상 동작 해결
+- 특정 사이트에서 로그인 항목에 불필요하게 많이 채워넣는 문제 해결
+- 개인 보관함을 사용중일 때 모든 보관함의 카테고리 정렬이 예측할 수 없는 방향으로 동작하는 문제 해결
+- 1Password Team 또는 Families에서 문서를 열람중일 때 에러 상세내역을 표시하지 못하는 문제 해결
+- "Show Web Form Details" 또는 "Show Previously Used Passwords" 버튼을 눌렀을 때 시각기반 또는 일회용 비밀번호가 사라지는 문제 해결
+- '항상 1Password 미니 실행 계속'이 설정되지 않았을 때 , "Google Chrome 사용하기" 대신 "Google 사용"으로 표시되더 ㄴ문제 해결
+- 노트 간의 충돌이 이제 제대로 해결됩니다.
+- 새로 추가된 항목이 같은 업데이트 시각을 나타내야 함에도 서로 다른 시각을 표시할 수 있는 문제 해결
+- 항목을 변경하던 중 날짜 선택에서 X 버튼이 눌렸을 때 날짜 값이 비워지지 않는 문제 해결
+- 로그인 저장 윈도우의 형식이 깨지는 문제 해결
+- 로그인 저장 윈도우에서 잠금 해제할 경우 활성화 된 보관함으로부터 기본 보관함으로 돌아가지 않는 문제 해결
+- 1Password mini에서 대소문자를 틀리게 검색했을 때 사용자 이름username을 찾지 못하는 문제 해결 *글자는 대문자든 소문자든 같다는 것을 다시 가르쳤습니다.*
+- URL을 복사할 때 처음 5글자 이후로는 클립보드에 복사되지 않는 문제 해결
+- 1Password mini에서 문서를 열람할 때 간헐적으로 충돌이 나는 문제 해결
+- 복수의 Chrome 프로파일이 같은 로그인 페이지를 열고 있을 때 1Password가 잘못된 내용을 입력하는 문제 해결
+- 검색 필드에 초점이 맞추어져 있을 때 cmd + f 를 누르면 맥이 경고음을 내는 대신 모든 텍스트를 선택합니다
+- starbucks.com 로그인 채워넣기를 개선하고 같은 종류의 로그인 형식을 사용하는 전세계의 도메인에 대하여도 동일합니다.
+- starbucks.com의 로그인 채워넣기가 자바스크립트를 비활성화하여 로그인에 실패하게 하는 문제 해결
+- zalando.de의 숨겨진 형식에까지 채워넣는 문제 해결
+- Team 이나 Family 계정에서 이름이 없을 경우 보관함 선택기가 충돌하는 문제 해결
+- 리스트 보기 화면에서 커스텀 아이콘 크기 조절
+- 자동 저장 화면에서 잘못된 비밀번호를 입력함으로 멈추는 문제 해결
+- 업로드 중에 문서가 변경되면 깨지는 문제 해결
+- 1Password mini에서 메모리 누수 해결
+
+- - -
+
+Changelog 원문
+
+- - -
+
 1Password for Mac 6.2 is now available.
 
 # 6.2 (build #620012)
@@ -30,51 +92,51 @@ We love hearing from you! To provide feedback or get in touch with us, please jo
 
 ### NEW
 
-A new import workflow to make importing of data from LastPass easier. {OPM-3744}
-Added the ability to restore from iCloud when you run the AgileBits Store version of 1Password for the first time. {OPM-3621}
-When you create a new Login, 1Password will attempt to create an appropriate title based on the page's title and domain.
+- A new import workflow to make importing of data from LastPass easier. {OPM-3744}
+- Added the ability to restore from iCloud when you run the AgileBits Store version of 1Password for the first time. {OPM-3621}
+- When you create a new Login, 1Password will attempt to create an appropriate title based on the page's title and domain.
 
 ### IMPROVEMENTS
 
-When you move items from personal vaults to 1Password for Teams or Families vaults, your custom icons will move with them. {OPM-3813}
-Before 1Password decrypts Documents, you must now give the go-ahead. {OPM-3795}
-If you move one of your Favorites into a Personal vault in your 1Password account, it’ll stay marked as a favorite. {OPM-3877}
-If a username field is disabled or read-only, 1Password will no longer try to fill it.
-All of that studying has paid off! 1Password fills Credit Card and Identity items even more accurately.
-A more educated brain makes filling login forms more accurate.
-If you move several Documents into your 1Password account at the same time, 1Password will let you know which are uploading and which are in the queue. {OPM-3856}
-The Browsers preference pane is easier to understand.
-By default, the Bank Account, Email, and Wifi Routers categories are now sorted below Documents. {OPM-3396}
-The 1Password mini All Vaults icon is now the 1Password icon. {OPM-3623}
-Improved the Change Password text on the Teams preference pane. {OPM-3791}
-Search is now faster in 1Password mini. {OPM-3870}
-Updated our translations with the latest from our incredible translators on Crowdin.
+- When you move items from personal vaults to 1Password for Teams or Families vaults, your custom icons will move with them. {OPM-3813}
+- Before 1Password decrypts Documents, you must now give the go-ahead. {OPM-3795}
+- If you move one of your Favorites into a Personal vault in your 1Password account, it’ll stay marked as a favorite. {OPM-3877}
+- If a username field is disabled or read-only, 1Password will no longer try to fill it.
+- All of that studying has paid off! 1Password fills Credit Card and Identity items even more accurately.
+- A more educated brain makes filling login forms more accurate.
+- If you move several Documents into your 1Password account at the same time, 1Password will let you know which are uploading and which are in the queue. {OPM-3856}
+- The Browsers preference pane is easier to understand.
+- By default, the Bank Account, Email, and Wifi Routers categories are now sorted below Documents. {OPM-3396}
+- The 1Password mini All Vaults icon is now the 1Password icon. {OPM-3623}
+- Improved the Change Password text on the Teams preference pane. {OPM-3791}
+- Search is now faster in 1Password mini. {OPM-3870}
+- Updated our translations with the latest from our incredible translators on Crowdin.
 
 ### FIXED
 
-Fixed an issue where 1Password mini could appear to hang when clicking the menu bar icon. {OPM-3713}
-Fixed an issue where having multiple active Chrome profiles or Incognito windows could cause incorrect behavior of 1Password mini when using keyboard shortcuts. {OPM-3812}
-Fixed an issue on the Save Login window that caused tags to appear automatically when they shouldn't. {OPM-3718}
-Fixed an issue that caused 1Password to not properly limit the list of Logins when filling on certain sites.
-Fixed an issue that caused category sorting in All Vaults to behave in unpredictable ways when Personal vaults were in use. {OPM-3596}
-Fixed an issue that caused errors to fail to display the error details when viewing Documents in 1Password for Teams and Families. {OPM-3837}
-Fixed an issue that would cause time-based, one-time passwords to disappear from view when clicking the "Show Web Form Details" or "Show Previously Used Passwords" buttons. {OPM-3883}
-Fixed an issue that caused 1Password mini to display “Use Google” instead of “Use Google Chrome” when 1Password mini wasn't set to always keep running. {OPM-3704}
-Conflicts in notes fields are now resolved correctly. {OPM-3920}
-Fixed an issue where new items could have updated times different from their created times when, in fact, the two should be the same. {OPM-3792}
-Fixed an issue that prevented the date value from being cleared when the 'x' button in the date picker was clicked while an item was being edited. {OPM-3735}
-Fixed an issue that broke the Save Login window’s formatting. {OPM-3588}
-Fixed an issue where unlocking from the Save Login window wouldn't set the active vault back to your chosen default. {OPM-3740}
-If you searched for an item in the mini using capitalization different from the item’s, 1Password mini wouldn’t display the username for the item. We took it back to school and taught it that a letter is a letter no matter how small (or big, or accented!). {OPM-3859}
-Fixed an issue that prevented URLs beyond the first 5 from being copied to the clipboard when requested. {OPM-3688}
-Fixed an issue where viewing a Document in 1Password mini would sometimes cause a crash. {OPM-3866}
-Fixed an issue where 1Password could sometimes fill the wrong profile when multiple Chrome profiles have the same login page loaded. {OPM-887}
-Pressing Command-F when the search field is already in focus now correctly selects all of the text, instead of making your Mac beep. {OPM-3879}
-Fixed Login filling for starbucks.com and a variety of international domains using the same login form.
-Fixed Login filling on starbucks.com to not trigger web page Javascript that caused login to fail.
-Fixed Login filling on zalando.de to avoid filling hidden form.
-Fixed a vault picker crash that could occur if somehow a Team or Family account didn't have a name. {OPM-3825}
-Fixed the size of custom icons in the list view. {OPM-3886}
-Fixed a potential hang caused by entering the wrong Master Password in the auto-save window. {OPM-3868}
-Fixed a bug that could cause a Document to break if it was edited while completing upload. {OPM-3874}
-Fixed memory leaks in 1Password mini.
+- Fixed an issue where 1Password mini could appear to hang when clicking the menu bar icon. {OPM-3713}
+- Fixed an issue where having multiple active Chrome profiles or Incognito windows could cause incorrect behavior of 1Password mini when using keyboard shortcuts. {OPM-3812}
+- Fixed an issue on the Save Login window that caused tags to appear automatically when they shouldn't. {OPM-3718}
+- Fixed an issue that caused 1Password to not properly limit the list of Logins when filling on certain sites.
+- Fixed an issue that caused category sorting in All Vaults to behave in unpredictable ways when Personal vaults were in use. {OPM-3596}
+- Fixed an issue that caused errors to fail to display the error details when viewing Documents in 1Password for Teams and Families. {OPM-3837}
+- Fixed an issue that would cause time-based, one-time passwords to disappear from view when clicking the "Show Web Form Details" or "Show Previously Used Passwords" buttons. {OPM-3883}
+- Fixed an issue that caused 1Password mini to display “Use Google” instead of “Use Google Chrome” when 1Password mini wasn't set to always keep running. {OPM-3704}
+- Conflicts in notes fields are now resolved correctly. {OPM-3920}
+- Fixed an issue where new items could have updated times different from their created times when, in fact, the two should be the same. {OPM-3792}
+- Fixed an issue that prevented the date value from being cleared when the 'x' button in the date picker was clicked while an item was being edited. {OPM-3735}
+- Fixed an issue that broke the Save Login window’s formatting. {OPM-3588}
+- Fixed an issue where unlocking from the Save Login window wouldn't set the active vault back to your chosen default. {OPM-3740}
+- If you searched for an item in the mini using capitalization different from the item’s, 1Password mini wouldn’t display the username for the item. We took it back to school and taught it that a letter is a letter no matter how small (or big, or accented!). {OPM-3859}
+- Fixed an issue that prevented URLs beyond the first 5 from being copied to the clipboard when requested. {OPM-3688}
+- Fixed an issue where viewing a Document in 1Password mini would sometimes cause a crash. {OPM-3866}
+- Fixed an issue where 1Password could sometimes fill the wrong profile when multiple Chrome profiles have the same login page loaded. {OPM-887}
+- Pressing Command-F when the search field is already in focus now correctly selects all of the text, instead of making your Mac beep. {OPM-3879}
+- Fixed Login filling for starbucks.com and a variety of international domains using the same login form.
+- Fixed Login filling on starbucks.com to not trigger web page Javascript that caused login to fail.
+- Fixed Login filling on zalando.de to avoid filling hidden form.
+- Fixed a vault picker crash that could occur if somehow a Team or Family account didn't have a name. {OPM-3825}
+- Fixed the size of custom icons in the list view. {OPM-3886}
+- Fixed a potential hang caused by entering the wrong Master Password in the auto-save window. {OPM-3868}
+- Fixed a bug that could cause a Document to break if it was edited while completing upload. {OPM-3874}
+- Fixed memory leaks in 1Password mini.
