--- a/_posts/2016-04-04-AppCleaner_33.md
+++ b/_posts/2016-04-04-AppCleaner_33.md
@@ -4,9 +4,9 @@ title: AppCleaner 3.3 changelog
 ---
 AppCleaner 3.3 - Feb 13, 2016
 
-Updated Sparkle (the in-app updater) to fix a security issue.
-Improved search engine.
-Added Swedish localization, thanks to Pär Boberg.
+- Updated Sparkle (the in-app updater) to fix a security issue.
+- Improved search engine.
+- Added Swedish localization, thanks to Pär Boberg.
 
 - - -
 
