--- a/_posts/2016-04-06-1password_6.2.md
+++ b/_posts/2016-04-06-1password_6.2.md
@@ -64,7 +64,13 @@ published: true
 
 - - -
 
-Changelog 원문
+1Password의 Changelog는 볼때마다 재밌다. 예를 들어 *글자는 대문자든 소문자든 같다는 것을 다시 가르쳤습니다* 부분에서 피식하기까지 했다.  
+Changelog와는 별개로 1Password라는 서비스 자체의 의의에 집중하자면 각 사이트마다 비밀번호를 다르게 설정하고 이를 관리하기 쉽게하는 툴이다. 그 효과로는 하나가 뚫려도 나머지가 안전하다는 점. 추가적으로 브라우저 플러그인을 지원해서 ~~심지어 훌륭하기까지 하다~~ 맥에서는 비밀번호를 따로따로 설정하고 관리하기가 무척이나 편하다.  
+하지만 네이티브 앱에 대한 의존도가 높아지는 요즘 시점에서 앱 단에서 1Password를 지원하지 않으면 정말로 귀찮아지기 때문에 비밀번호를 따로따로 설정하지는 못하고 있는 게 ~~나의~~ 현실이다. 어찌보면 구더기 무서워서 장 못 담그는 격. 해석하면서 든 생각이지만 1Password가 나아가야 할 방향은 앱 단에서의 도입이 아닐까 하는 생각을 했다.
+
+- - -
+
+이하는 Changelog 원문
 
 - - -
 
