--- a/_posts/2016-04-06-1password_6.2.md
+++ b/_posts/2016-04-06-1password_6.2.md
@@ -13,8 +13,8 @@ published: true
 
 ## 새로운 기능
 
-- 라스트패스에서 데이터 가져오기 기능
-- AgileBits Store에서 구매한 버전) 처음 실행할 때 iCloud에서 데이터 복구하기 기능
+- 라스트패스LastPass에서 데이터 가져오기 기능
+- (AgileBits Store에서 구매한 버전) 처음 실행할 때 iCloud에서 데이터 복구하기 기능
 - 새로운 로그인 기록을 만들 경우, 웹페이지의 제목과 도메인 이름으로부터 적절한 제목을 붙이도록 시도합니다.
 
 ## 개선
@@ -26,7 +26,7 @@ published: true
 - 1Password가 신용카드와 개인정보 항목을 더 정확히 채워 넣습니다.
 - 로그인 항목을 더 정확히 채워 넣습니다.
 - 복수의 문서를 동시에 1Password 계정에 추가할 경우, 1Password는 어느 문서를 업로드하고 어느 문서를 대기열에 넣는지 알려줍니다.
-- 브라우저 설정이 이해하기 쉬워졌슶니다.
+- 브라우저 설정이 이해하기 쉬워졌습니다.
 - 은행계좌, 이메일, 와이파이 카테고리는 이제 기본적으로 문서 항목의 하위항목으로 분류됩니다.
 - 1Password mini의 모든 보관함의 아이콘으로 1Password의 아이콘이 사용됩니다.
 - 1Password Team의 설정 화면에서 비밀번호 변경 텍스트를 개선했습니다.
@@ -42,7 +42,7 @@ published: true
 - 개인 보관함을 사용중일 때 모든 보관함의 카테고리 정렬이 예측할 수 없는 방향으로 동작하는 문제 해결
 - 1Password Team 또는 Families에서 문서를 열람중일 때 에러 상세내역을 표시하지 못하는 문제 해결
 - "Show Web Form Details" 또는 "Show Previously Used Passwords" 버튼을 눌렀을 때 시각기반 또는 일회용 비밀번호가 사라지는 문제 해결
-- '항상 1Password 미니 실행 계속'이 설정되지 않았을 때 , "Google Chrome 사용하기" 대신 "Google 사용"으로 표시되더 ㄴ문제 해결
+- '항상 1Password 미니 실행 계속'이 설정되지 않았을 때 , "Google Chrome 사용하기" 대신 "Google 사용"으로 표시되던 문제 해결
 - 노트 간의 충돌이 이제 제대로 해결됩니다.
 - 새로 추가된 항목이 같은 업데이트 시각을 나타내야 함에도 서로 다른 시각을 표시할 수 있는 문제 해결
 - 항목을 변경하던 중 날짜 선택에서 X 버튼이 눌렸을 때 날짜 값이 비워지지 않는 문제 해결
