--- a/_posts/2016-05-07-Tweetbot43.md
+++ b/_posts/2016-05-07-Tweetbot43.md
@@ -9,7 +9,7 @@ title: 트윗봇 4.3
 
 트윗 작성 화면에서 우하단 톱니바퀴를 눌러 토픽을 등록해준 뒤 토픽을 탭해주면 이후부터 작성하는 트윗은 토픽 키워드 아래로 묶인다. 매번 설정할 필요 없이 한 번 설정해주면 이후로 작성하는 트윗은 토픽으로 연결된다. 
 
-![](/Resources/2016-05-07/topic-ed.jpg){: .center-image }
+![](/Resources/2016-05-07/topic-ed.JPG){: .center-image }
 
 더 이상 연결되는 것을 원치 않으면 상단 x를 눌러 해제해주면 된다.
 
