geektool added date_eng

--- a/_posts/2016-06-25-GeekTool.md
+++ b/_posts/2016-06-25-GeekTool.md
@@ -84,6 +84,10 @@ Shell script를 이용하여 CPU 온도와 팬 속도를 표시합니다.
 
 Shell script를 이용하여 오늘 날짜와 시각을 표시합니다.
 
+![](/Resources/2016-06-25/date_eng.png)
+
+한글이 어울리지 않는 경우를 위해서 [요일이 영어로 나오도록 하는 geeklet](/Resources/2016-06-25/glets/ClockandDate_Eng.glet)도 첨부합니다. 언어 설정과 무관하게 영어로 나옵니다.
+
 ## [Weather](/Resources/2016-06-25/glets/Weather.glet)
 
 iTunes 재생 정보와 더불어서 가장 사연이 많은 Geeklet인데요. Shell script를 이용하여 야후 웨더 API를 통해서 날씨 정보를 받아옵니다. 기본 설정은 서울입니다.
