--- a/_posts/2016-06-26-test.md
+++ b/_posts/2016-06-26-test.md
@@ -3,7 +3,7 @@ layout: post
 title: this post is for test purpose
 published: true
 menu: private
-permalink: test
+permalink: /test
 ---
 
 ![](/Resources/2016-06-25/color_panel.png)
