--- a/_posts/2016-07-16-.md
+++ b/_posts/2016-07-16-.md
@@ -10,3 +10,5 @@ title:
 > 
 >
 > In life, you can be afraid, you can think of the risk, and you can allow that to cloud your judgement and not push yourself, OR you can say "Actually, I've got to take a leap here, and I've got to push myself."
+
+이 말이 너무 마음에 들었다.
