vox youtube updated

--- a/_posts/2016-07-22-vox_yt.md
+++ b/_posts/2016-07-22-vox_yt.md
@@ -29,6 +29,12 @@ title: Vox로 Youtube 음악 듣기
 
 메뉴바의 File > Open Stream... 또는 cmd + U 를 눌러서 입력 창을 불러낸 후 전단계에서 확보한 URL을 붙여넣는다.
 
-![](/Resources/2016-07-22/vox_adding.png) ![](/Resources/2016-07-22/vox_added.png)
+![](/Resources/2016-07-22/vox_added.png)
 
 조금 기다리면 목록이 모두 뜨면서 재생이 된다. 셔플 / 반복 / 글로벌 컨트롤 (iTunes라든가 기타 미디어 앱이 상위에 있지 않는 한) 모두 가능하다.
+
+
+
+------
+
+장점이라면 포커스를 맞추지 않더라도 키보드로 컨트롤이 가능하다는 점. 단점이라면 가끔씩 failed to load가 뜨면서 음악을 건너 뛴다는 점.
