--- a/_posts/2016-07-22-vox_yt.md
+++ b/_posts/2016-07-22-vox_yt.md
@@ -3,7 +3,7 @@ layout: post
 title: Vox로 Youtube 음악 듣기
 ---
 
-![](/Resources/2016-07-22/vox_music.png)
+![](/Resources/2016-07-22/vox_music.png){: .center-image }
 
 맥미니를 사고 난 이후로 방에 음악을 틀어놓는 습관이 생겼다. 주로 유투브에서 Epic BGM 류를 틀어놓는데 문제는, 유투브가 키보드로 컨트롤이 안 된다는 점이었다. 귀찮게 포커스를 매번 Safari로 맞추고 나서야 컨트롤이 가능했다는 것.
 
