--- a/_posts/2016-07-27-note_apps.md
+++ b/_posts/2016-07-27-note_apps.md
@@ -199,6 +199,10 @@ Evernote 급이지만 더 아름답다. 그리고 더 무겁다.
 
 - 사소한 버그… 들
   - 단축키를 설정해 놓았을 때 입력키가 중복되는 버그가 있는 듯 하다.
+<video width="640" height="400" autoplay loop=TRUE>
+  <source src="/Resources/2016-07-27/typora_character.mp4"type="video/mp4">
+Browser does not support video tag.
+</video>
   - 리스트를 작성할 때 첫 글자의 한글 자모가 풀려버리는 현상. 문서 크기가 커질수록 심해지는 듯 하나 0.9.9.6 버전에서 출현 빈도가 극히 줄어들었다.
 
 
