DIY macbook stand

--- a/_posts/2016-08-09-DIY-맥북-거치대-만들기.md
+++ b/_posts/2016-08-09-DIY-맥북-거치대-만들기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: DYI 맥북 거치대 만들기
+title: DIY 맥북 거치대 만들기
 ---
 
 [맥용 악세서리, 이제 비싼 돈 주고 사지말고 직접 만들어 씁시다!](http://macnews.tistory.com/135)에서 보고 언젠가 한 번 만들어봐야겠다 싶었던 걸 만들었다.
