iOS20 and iPhone 7

--- a/_posts/2016-09-17-iOS-10과-아이폰-7.md
+++ b/_posts/2016-09-17-iOS-10과-아이폰-7.md
@@ -9,6 +9,6 @@ iOS 10의 공식 버전이 배포되면서 이를 선탑재하는 아이폰 7에
 
 다만 신경이 쓰이는 점은, *이번에는 어느 부분에서 문제가 불거질까*하는 점입니다.
 
-한국에 처음 발매되었던 아이폰인 __iPhone 3GS__는 이어폰 단자에 크랙이 생기는 문제가 불거졌었습니다~~*어라 여기도 3.5파이군요*~~. 역대급 디자인으로 불리던 __iPhone 4__에는 데스 그립 문제가 있었고요. 그 다음 __iPhone 5__에서는(그리 많지는 않았지만) 배터리 문제가 있었고(그리고 여기서 라이트닝 케이블로 또 논란이 있었죠), __iPhone 6__에서는 결정적으로 BendGate가 있었습니다. BendGate를 해결한 6S에서는 알루미늄 산화현상이 여기저기서 나타나면서 또 논란을 일으켰지요(***그리고 애플은 이에 대해 아직 아무런 대응이 없습니다***)
+한국에 처음 발매되었던 아이폰인 **iPhone 3GS**는 이어폰 단자에 크랙이 생기는 문제가 불거졌었습니다~~*어라 여기도 3.5파이군요*~~. 역대급 디자인으로 불리던 **iPhone 4**에는 데스 그립 문제가 있었고요. 그 다음 **iPhone 5**에서는(그리 많지는 않았지만) 배터리 문제가 있었고(그리고 여기서 라이트닝 케이블로 또 논란이 있었죠), **iPhone 6**에서는 결정적으로 BendGate가 있었습니다. BendGate를 해결한 6S에서는 알루미늄 산화현상이 여기저기서 나타나면서 또 논란을 일으켰지요(***그리고 애플은 이에 대해 아직 아무런 대응이 없습니다***)
 
 솔직한 생각은 이번 아이폰에서 3.5파이는 의외로 괜찮을 거라고 봅니다. 정말로 걱정되는 건 -사실 제가 걱정할 부분은 아닙니다만, iPhone 7을 살 것도 아니고 애플 주식을 가지고 있는 것도 아니고- 논란이 되지 않은 부분에서 불거지는 문제들이죠. 모 제조사에서 만든 스마트폰이 폭탄으로 둔갑하는 사례처럼 iPhone 7도 폭발물이 된다든가, 어쩌면 홈버튼이 말썽을 부릴지도 모르죠. 예상하지 못한 영역이라서 저도 예시를 들 수 없는 게 아쉽군요.
