무선에 대한 단상

--- a/_posts/2016-09-25-<i>무선<:i>에-대한-단상.md
+++ b/_posts/2016-09-25-<i>무선<:i>에-대한-단상.md
@@ -27,11 +27,11 @@ title: <i>무선</i>에 대한 단상
 
 그리고 **분실의 위험**을 언급하지 않을 수가 없습니다. [Earin](https://www.earin.com)이나 에어팟같은 완전 무선 이어폰에서 특히 유의할 사항이겠지만 크기가 작다보니 조금만 주의가 분산되어도 쉽게 잃어버릴 수 있는 가능성이 있습니다. Earin도 에어팟도 각자 고유의 케이스가 있음에도 아래같은 시나리오가 쉽게 상상이 가는 것은 분명 바람직한지는 확신하기가 어렵네요.
 
-​	뛰고 있는데 귀에 땀이 차기 시작합니다. 잠시 귀에서 이어폰을 꺼내고 땀을 닦으면 좋겠습니다. 귀에서 이어폰을 꺼내려는데 손에서 미끄러진 이어폰이 어디로 갔는지 보이지 않습니다.
+> 뛰고 있는데 귀에 땀이 차기 시작합니다. 잠시 귀에서 이어폰을 꺼내고 땀을 닦으면 좋겠습니다. 귀에서 이어폰을 꺼내려는데 손에서 미끄러진 이어폰이 어디로 갔는지 보이지 않습니다.
 
 또는
 
-​	이어폰을 듣고 강의실(아니면 사무실)에 도착해서 가방을 내려놓고 이어폰을 빼놓고 화장실에 가려고 합니다. 시간을 보니 강의 시작(아니면 업무 시작) 2분 전입니다. 급하게 이어폰을 귀에서 꺼내서 책상 위에 올려놓고 돌아섰는데 이어폰이 책상 아래로 굴러 떨어집니다. 화장실에 갔다 와보니 이어폰 한 쪽이 보이지 않습니다.
+> 이어폰을 듣고 강의실(아니면 사무실)에 도착해서 가방을 내려놓고 이어폰을 빼놓고 화장실에 가려고 합니다. 시간을 보니 강의 시작(아니면 업무 시작) 2분 전입니다. 급하게 이어폰을 귀에서 꺼내서 책상 위에 올려놓고 돌아섰는데 이어폰이 책상 아래로 굴러 떨어집니다. 화장실에 갔다 와보니 이어폰 한 쪽이 보이지 않습니다.
 
 라든가. 다분히 억지로 만들어 낸 시나리오이긴 합니다만 이런 일이 정말 없을지는 잘 모르겠습니다.
 
@@ -43,7 +43,7 @@ title: <i>무선</i>에 대한 단상
 >
 > 어찌됐든 이 긴글이 주장하고 싶은 사실, 그것은  ‘용기’가 최종적으로 향할 곳은 자유라는 것입니다. 그리고 몇년이 지나면 우리는 이 자유를 당연하게 여길지 모릅니다.
 >
-> \- [푸른곰의 모노로그 | 선을 자르는 용기에 대한 생각](https://purengom.com/2016/09/23/%ec%84%a0%ec%9d%84-%ec%9e%90%eb%a5%b4%eb%8a%94-%ec%9a%a9%ea%b8%b0%ec%97%90-%eb%8c%80%ed%95%9c-%ec%83%9d%ea%b0%81/)
+> \- [푸른곰의 모노로그 \| 선을 자르는 용기에 대한 생각](https://purengom.com/2016/09/23/%ec%84%a0%ec%9d%84-%ec%9e%90%eb%a5%b4%eb%8a%94-%ec%9a%a9%ea%b8%b0%ec%97%90-%eb%8c%80%ed%95%9c-%ec%83%9d%ea%b0%81/)
 
 저는 처음 IT 쪽에 관심을 가진 이래로 집 네트워크 구성을 쭉 무선으로 설정해왔습니다. 무선 구성을 당연히 여겼기에 할 수 있었던 *짓*이고 얼마나 멍청한 선택이었는지 깨닫기까지 근 5년이 꼬박 걸렸지만요. 그리고 이번 달 중순에 결국 컴퓨터들만이라도 유선으로 구성하게 되었습니다. *용기*의 가장 마지막 도달점은 *자유*라는 말에 세상 누구보다도 동의합니다. 정말로 자유로워요. 하지만 그 자유가 과연 사용자 경험을 개선해 줄지는 잘 모르겠습니다. 어쩌면 조금은 회의적일지도 모르겠어요.
 
