--- a/_posts/2016-10-02-Safari-10.md
+++ b/_posts/2016-10-02-Safari-10.md
@@ -8,7 +8,7 @@ Safari 10으로 업그레이드 한 지 대략 열흘이 지났습니다. 쓸만
 우선 아주 재밌는 개선이 있었습니다. 영상으로 보시죠
 
 <video width="523" height="408" controls>
- <source src="http://d.pr/v/S7DC+" type="video/mov">
+ <source src="http://d.pr/v/S7DC+">
 Your browser does not support the video tag.
 </video>
 
