--- a/_posts/2016-10-02-Safari-10.md
+++ b/_posts/2016-10-02-Safari-10.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Safari 10
+tags: 
+ - OSX
+ - Safari
 ---
 
 Safari 10으로 업그레이드 한 지 대략 열흘이 지났습니다. 쓸만큼 썼고 성질이 머리 끝까지 뻗칠대로 뻗쳤다고 봐도 무방할 것 같습니다… 
