--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -4,13 +4,13 @@
 
 ## Fileicon 설치[^npm]
 
-#### 1. `/Applications/Utilities/Terminal.app`을 열고 아래의 코드를 복사·붙여넣기 하여 `fileicon`을 내려받습니다.
+1\.`/Applications/Utilities/Terminal.app`을 열고 아래의 코드를 복사·붙여넣기 하여 `fileicon`을 내려받습니다.
 
 `curl https://raw.githubusercontent.com/mklement0/fileicon/stable/bin/fileicon -o /usr/local/bin/fileicon`
 
 ![](http://d.pr/i/qJPy+)
 
-#### 2. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon`을 실행할 수 있는 상태로 권한을 설정합니다.
+2\. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon`을 실행할 수 있는 상태로 권한을 설정합니다.
 
 `sudo chmod +x /usr/local/bin/fileicon`
 
@@ -29,15 +29,15 @@
 
 여기까지 따라왔으면 `fileicon`을 이용해서 커맨드 라인으로 커스텀 아이콘을 적용할 수 있으나 어플리케이션이 업데이트 될 경우 아이콘이 원상복귀되게 됩니다. 따라서 어플리케이션이 업데이트, 즉 내부 파일이 변경될 경우에 `fileicon`을 다시 실행하도록 데몬을 작성하고 활성화합니다.
 
-#### 1. 터미널에 `cd /Library/LaunchDaemons`를 입력해서 `/Library/LaunchDaemons/` 디렉터리로 이동합니다.
+1\. 터미널에 `cd /Library/LaunchDaemons`를 입력해서 `/Library/LaunchDaemons/` 디렉터리로 이동합니다.
 
-#### 2. 터미널에 아래 명령어를 입력해서 데몬 파일을 생성합니다. 앱에 따라서 파일 이름을 바꾸어 줄 수 있습니다. 뒤에 `.plist` 붙이는 것만 기억하세요.
+2\. 터미널에 아래 명령어를 입력해서 데몬 파일을 생성합니다. 앱에 따라서 파일 이름을 바꾸어 줄 수 있습니다. 뒤에 `.plist` 붙이는 것만 기억하세요.
 
 `touch me.fileicon.KakaoTalk.plist`
 
 ![](http://d.pr/i/LeRH+)
 
-#### 3. `open .`을 입력하여 Finder 창을 열고 에디터로 파일을 열어서[^editor] 아래 내용을 복사해 붙여넣습니다.
+3\. `open .`을 입력하여 Finder 창을 열고 에디터로 파일을 열어서[^editor] 아래 내용을 복사해 붙여넣습니다.
 
 ```plist
 <?xml version="1.0" encoding="UTF-8"?>
@@ -82,11 +82,11 @@
 
 데몬을 작성했으니 데몬이 돌아가게 해야 합니다.
 
-#### 1. `/Applications/Utilities/Terminal.app`을 열고 아래 명령어를 입력해 디렉터리로 이동합니다.
+1\. `/Applications/Utilities/Terminal.app`을 열고 아래 명령어를 입력해 디렉터리로 이동합니다.
 
 `cd /Library/LaunchDaemons`
 
-#### 2.  아래 명령어를 입력해서 데몬을 등록합니다. 물론 `.plist`가 포함된 *파일명*을 입력해야 합니다, 만약 바꿨다면 말이죠. *대소문자 유의*
+2\.  아래 명령어를 입력해서 데몬을 등록합니다. 물론 `.plist`가 포함된 *파일명*을 입력해야 합니다, 만약 바꿨다면 말이죠. *대소문자 유의*
 
 `launchctl load me.fileicon.KakaoTalk.plist`
 
