--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -1,4 +1,9 @@
-# Fileicon을 이용하여 앱 아이콘을 자동으로 변경하기
+---
+layout: post
+title: Fileicon을 이용하여 앱 아이콘을 자동으로 변경하기
+tags: 
+ - OSX
+---
 
 `fileicon`을 이용해서 어플리케이션의 아이콘을 자동으로 바뀐 아이콘으로 유지하도록 하는 방법을 적어보았습니다. **`fileicon`을 설치하는 단계**와 **데몬을 작성하여 지속적으로 아이콘을 바꿔주는 단계**로 나뉩니다.
 
