--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -79,7 +79,7 @@ tags:
 - 15번째 줄은 아이콘 파일 위치입니다. `~/`를 쓸 수 없기 때문에 `Users/(홈폴더)`을 전부 넣어주어야 합니다. 홈폴더 이름을 모른다면 Finder에서 `cmd+shift+h`를 눌러서 창 맨 위를 보면 됩니다.
 - 21번째 줄은 내용물의 *변경이 있는지*를 지켜보는 경로입니다. 보통 14줄과 동일하게 적으시면 됩니다.
 
-#### 4. 변경이 끝났으면 저장합니다. 비밀번호를 물어보면 계정 비밀번호를 입력합니다.
+4\. 변경이 끝났으면 저장합니다. 비밀번호를 물어보면 계정 비밀번호를 입력합니다.
 
 [^editor]: 개인적으로 [Sublime Text 3에 Material Theme](http://canorus.github.io//2016/08/05/sublime_material_theme/)을 적용해서 사용하고 있습니다.
 
