--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -15,7 +15,7 @@ tags:
 
 ![](http://d.pr/i/qJPy+)
 
-2\. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon`을 실행할 수 있는 상태로 권한을 설정합니다.
+2\. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon` 실행파일의 권한을 설정합니다.
 
 `sudo chmod +x /usr/local/bin/fileicon`
 
