--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -34,7 +34,7 @@ tags:
 
 여기까지 따라왔으면 `fileicon`을 이용해서 커맨드 라인으로 커스텀 아이콘을 적용할 수 있으나 어플리케이션이 업데이트 될 경우 아이콘이 원상복귀되게 됩니다. 따라서 어플리케이션이 업데이트, 즉 내부 파일이 변경될 경우에 `fileicon`을 다시 실행하도록 데몬을 작성하고 활성화합니다.
 
-1\. 터미널에 `cd /Library/LaunchDaemons`를 입력해서 `/Library/LaunchDaemons/` 디렉터리로 이동합니다.
+1\. 터미널에 `cd /Library/LaunchDaemons`를 입력해서 데몬이 위치한 디렉터리로 이동합니다.
 
 2\. 터미널에 아래 명령어를 입력해서 데몬 파일을 생성합니다. 앱에 따라서 파일 이름을 바꾸어 줄 수 있습니다. 뒤에 `.plist` 붙이는 것만 기억하세요.
 
@@ -76,7 +76,7 @@ tags:
 - 6줄 `<key>Label</key>`라고 쓰인 아래 `<string>`값에는 파일 이름에서 .plist를 뺀 값을 적어줍니다, 만약 파일명을 바꾸었다면 말이죠. *대소문자 유의*.
 - 만약 npm으로 fileicon을 설치하였다면  12줄 `<string>/usr/local/fileicon</string>` 대신 `<string>/usr/local/Cellar/node/(Node 버전)/bin/fileicon</string>`입니다. `npm`으로 설치하실 정도면 부연 설명이 필요없을 것이라 봅니다.
 - 14번째 줄은 커스텀 아이콘이 *적용될* 어플리케이션의 위치입니다. 맨 앞에 `~`가 없는 것에 주목해주세요.
-- 15번째 줄은 아이콘 파일 위치입니다. `~/`를 쓸 수 없기 때문에 `Users/(홈폴더)`을 전부 넣어주어야 합니다. 홈폴더 이름을 모른다면 Finder에서 `cmd+shift+h`를 눌러서 창 맨 위를 보면 됩니다.
+- 15번째 줄은 아이콘 파일 위치입니다. `~/`를 쓸 수 없기 때문에 `Users/(홈폴더)/`부분을 전부 넣어주어야 합니다. 홈폴더 이름을 모른다면 Finder에서 `cmd+shift+h`를 누르면 창 맨 위에 홈 폴더 명이 나타납니다.
 - 21번째 줄은 내용물의 *변경이 있는지*를 지켜보는 경로입니다. 보통 14줄과 동일하게 적으시면 됩니다.
 
 4\. 변경이 끝났으면 저장합니다. 비밀번호를 물어보면 계정 비밀번호를 입력합니다.
