--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -15,7 +15,7 @@ tags:
 
 ![](http://d.pr/i/qJPy+)
 
-2\. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon` 실행파일의 권한을 설정합니다.
+2\. 터미널을 열고 아래의 코드를 복사·붙여넣기하여 `fileicon` 실행파일의 권한을 설정합니다. *x는 소문자입니다*
 
 `sudo chmod +x /usr/local/bin/fileicon`
 
@@ -73,7 +73,7 @@ tags:
 
 변경해야 하는 부분이 적게는 한 군데, 많게는 다섯 군데입니다.
 
-- 6줄 `<key>Label</key>`라고 쓰인 아래 `<string>`값에는 파일 이름에서 .plist를 뺀 값을 적어줍니다, 만약 파일명을 바꾸었다면 말이죠. *대소문자 유의*.
+- 9줄 `<string>`값에는 파일 이름에서 .plist를 뺀 값을 적어줍니다, 만약 파일명을 바꾸었다면 말이죠. *대소문자 유의*.
 - 만약 npm으로 fileicon을 설치하였다면  12줄 `<string>/usr/local/fileicon</string>` 대신 `<string>/usr/local/Cellar/node/(Node 버전)/bin/fileicon</string>`입니다. `npm`으로 설치하실 정도면 부연 설명이 필요없을 것이라 봅니다.
 - 14번째 줄은 커스텀 아이콘이 *적용될* 어플리케이션의 위치입니다. 맨 앞에 `~`가 없는 것에 주목해주세요.
 - 15번째 줄은 아이콘 파일 위치입니다. `~/`를 쓸 수 없기 때문에 `Users/(홈폴더)/`부분을 전부 넣어주어야 합니다. 홈폴더 이름을 모른다면 Finder에서 `cmd+shift+h`를 누르면 창 맨 위에 홈 폴더 명이 나타납니다.
@@ -87,7 +87,7 @@ tags:
 
 데몬을 작성했으니 데몬이 돌아가게 해야 합니다.
 
-1\. `/Applications/Utilities/Terminal.app`을 열고 아래 명령어를 입력해 디렉터리로 이동합니다.
+1\. Terminal.app을 열고 아래 명령어를 입력해 디렉터리로 이동합니다.
 
 `cd /Library/LaunchDaemons`
 
@@ -114,7 +114,7 @@ tags:
 커스텀 아이콘 여부 확인: fileicon test <확인할 파일이나 폴더>
 ```
 
-일단 이 튜토리얼에서는 `fileicon` 실행파일을 `/usr/local/bin`에 위치시켰기 때문에 별다른 설정없이도 작동할 것으로 예상합니다만 만일 다른 위치에 저장하셨다면 Terminal.app에서 `echo $PATH`를 실행하여 PATH에 실행파일이 들어갔는지 확인하셔야 합니다.
+\* 일단 이 튜토리얼에서는 `fileicon` 실행파일을 `/usr/local/bin`에 위치시켰기 때문에 별다른 설정없이도 작동할 것으로 예상합니다만 만일 다른 위치에 저장하셨다면 Terminal.app에서 `echo $PATH`를 실행하여 PATH에 실행파일이 들어갔는지 확인하셔야 합니다.
 
 - console에 관련 로그가 10초에 한 번씩 찍히기 때문에 콘솔 로그를 자주 들여다보신다면… 스트레스를 받으실 수도 있습니다…
 
