--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -9,7 +9,7 @@ tags:
 
 ## Fileicon 설치[^npm]
 
-1\.`/Applications/Utilities/Terminal.app`을 열고 아래의 코드를 복사·붙여넣기 하여 `fileicon`을 내려받습니다.
+1\. Terminal.app을 열고 아래의 코드를 복사·붙여넣기 하여 `fileicon`을 내려받습니다.
 
 `curl https://raw.githubusercontent.com/mklement0/fileicon/stable/bin/fileicon -o /usr/local/bin/fileicon`
 
