--- a/_posts/2016-11-05-새로운맥북프로를보면서.md
+++ b/_posts/2016-11-05-새로운맥북프로를보면서.md
@@ -15,9 +15,9 @@ title: 업데이트된 맥북 프로를 보면서
 
 직관적인 관점에서 전자가 정답이다. 여기에는 이론의 여지가 없다고 본다. 정말 사소한 부분이지만 사용하는 즐거움이 있다. 아 물론 정말 사소한 부분에서 신경을 긁는 경우도 있다~~사실 많다~~.
 
-맥에만 있는 훌륭한 서드파티들도 아마 OS X을(그리고 아마도 macOS를) 사용하는데 즐거움을 주는 요소 중 하나겠다. 하지만 이 부분은 정확히 그 반대도 있으니 패스. 예를 들자면 윈도우에서 사용하는 웹캠 촬영 환경을 구축하는데 거의 1년이 걸렸다. 하지만 Alfred는 예외다. 이건 진짜다. 컴퓨터 사용의 알파이자 오메가라는 표현이 아깝지가 않다. Alfred때문에라도 윈도우즈로 못 넘어갈 것 같기도 하다. ~~반대로 윈도우용 Alfred가 나오면 넘어가는 걸 진지하게 고려할지도 모르겠다.~~ Win 10에서 실행창이 많이 좋아지기는 했는데 음… 아직은 Alfred에 못 미친다고 본다, 제대로 써보지는 않아서 확신은 못 하겠지만 Win XP 쓸 때도 win+r 조합으로 간간이 쓰던 기능이니 내가 아는 것과 크게 다르지 않을거라 본다.[^실행]
+맥에만 있는 훌륭한 서드파티들도 아마 OS X을(그리고 아마도 macOS를) 사용하는데 즐거움을 주는 요소 중 하나겠다. 하지만 이 부분은 정확히 그 반대도 있으니 패스. 예를 들자면 윈도우에서 사용하는 웹캠 촬영 환경을 구축하는데 거의 1년이 걸렸다. 하지만 Alfred는 예외다. 이건 진짜다. 컴퓨터 사용의 알파이자 오메가라는 표현이 아깝지가 않다. Alfred때문에라도 윈도우즈로 못 넘어갈 것 같기도 하다. ~~반대로 윈도우용 Alfred가 나오면 넘어가는 걸 진지하게 고려할지도 모르겠다.~~ Win 10에서 실행창이 많이 좋아지기는 했는데 음… 아직은 Alfred에 못 미친다고 본다, 제대로 써보지는 않아서 확신은 못 하겠지만 Win XP 쓸 때도 win+r 조합으로 간간이 쓰던 기능이니 내가 아는 것과 크게 다르지 않을거라 본다[^run].
 
-[^실행]: 어떤 식이냐면 Alfred로 미리보기 앱을 열려면 *내가 설정한* 단축키로 창을 불러내어서 `미리보기`나 `preview`를 입력하면 된다. 하지만 실행으로 그림판을 불러내려면 `paint`만이 유효한 호출이 된다. `notepad`(메모장)은 그럭저럭 금방 적응이 되는데 머릿속에서 그림판을 paint와 연결짓기까지 거의 3년 가까운 시간이 걸렸다. 그리고 워드패드는 아직까지도 영어이름을 모른다.
+[^run]: 어떤 식이냐면 Alfred로 미리보기 앱을 열려면 *내가 설정한* 단축키로 창을 불러내어서 `미리보기`나 `preview`를 입력하면 된다. 하지만 실행으로 그림판을 불러내려면 `paint`만이 유효한 호출이 된다. `notepad`(메모장)은 그럭저럭 금방 적응이 되는데 머릿속에서 그림판을 paint와 연결짓기까지 거의 3년 가까운 시간이 걸렸다. 그리고 워드패드는 아직까지도 영어이름을 모른다.
 
 하지만 최근 세 세대의 *가장 진보한 데스크탑 운영체제*들이 작동하는 모습을 보면서 뭔가 답답해지기 시작한다. 한글 입력 관련해서는 버그가 넘쳐나고 여기저기서 오류를 뱉고 가장 기본적인 기능이 안 되어서 복장을 터뜨리게 한다. 가장 마지막으로 복장이 터진 건 AirDrop이 안 되던 문제(결국 mDNSResponder로 내리면서 해결된 그 문제)였다. 그거 좀 된 문제같은데 라고 생각하신다면 그 이후로는 새 운영체제가 나와도 .2 버전부터 설치해서 그렇다. .0은 차치하고 .1을 골드 마스터라고 불러야 맞지 않나 싶다. 이럴 거면 베타 기간은 왜 있는건가 싶다.
 
