--- a/_posts/2016-11-29-bear.md
+++ b/_posts/2016-11-29-bear.md
@@ -1,4 +1,8 @@
-# Markdown processor *Bear*
+---
+layout: post
+title: 마크다운 프로세서 <i>Bear</i>
+---
+
 얼마 전부터 iOS 앱스토어와 Mac 앱스토어의 배너에 Bear라는 노트 앱이 걸리기 시작했다. iOS와 macOS에서 노트를 작성하는 앱이라고 적혀있었다. 바로 받아서 사용해보았다.
 
 ## 기본 구성
