--- a/_posts/2016-11-29-bear.md
+++ b/_posts/2016-11-29-bear.md
@@ -7,13 +7,13 @@ title: 마크다운 프로세서 <i>Bear</i>
 
 ## 기본 구성
 
-![Intro](http://d.pr/i/XFQi+)
+![Intro](http://d.pr/i/XFQi+){: .center-image }
 
 처음 앱을 열면 인트로가 나타난다. 기본적으로 사이드바, 노트 리스트, 노트 내용의 3단으로 구성이 되어 있다. 각각의 구성은 ctrl + 1/2/3 의 단축키로 변경할 수 있으며 우하단의 레이아웃 버튼을 눌러서 선택할 수도 있다.
 
- *이탤릭*, **볼드**, -취소선-[^1], *밑줄*, 6단계 헤더 등의 스타일을 지원하며 각각에 단축키가 부여되어 있다. 그러나 footnote를 지원하지 않는다.
+ *이탤릭*, **볼드**, ~~취소선~~[^1], *밑줄*, 6단계 헤더 등의 스타일을 지원하며 각각에 단축키가 부여되어 있다. 그러나 footnote를 지원하지 않는다.
 
-![document_insertion_unprocessed](http://d.pr/i/iVhZ+)
+![document_insertion_unprocessed](http://d.pr/i/iVhZ+){: .center-image}
 
 한 가지 재밌는 것은 노트 간의 링크를 지원한다는 것이다. 
 
@@ -22,7 +22,7 @@ title: 마크다운 프로세서 <i>Bear</i>
 
 다양한 출력을 지원하는데 마크다운(md), pdf, html, 워드(docx), 이미지(jpg), 리치 텍스트(rtf)를 지원한다. 다만 마크다운 포맷을 제외한 나머지 포맷으로 출력하기 위해서는 구독 결제를 해야 한다.
 
-![export1](http://d.pr/i/X9va+)
+![export1](http://d.pr/i/X9va+){: .center-image}
 
 ## 기타 기능
 
@@ -37,11 +37,11 @@ Bear는 프로버전을 지원한다. 프로버전은 매달 $1.64(2016-11-09 14
 - 기기 간 동기화
 - pdf 및 기타 포맷으로 내보내기
 
-![export_full](http://d.pr/i/NcN7+)
+![export_full](http://d.pr/i/NcN7+){: .center-image }
 
 - 다양한 테마
 
-![theme](http://d.pr/i/snci+)
+![theme](http://d.pr/i/snci+){: .center-image }
 
 ## 상세검색
 
