--- a/_posts/2016-12-15-Noto_Sans.md
+++ b/_posts/2016-12-15-Noto_Sans.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Noto Sans 폰트를 적용했다
+tags: 
+ - 관리 일지
 ---
 
 언제부턴가 블로그 글이 가독성이 엉망이 된 기분이었다. 자세히 보니 Noto Sans 폰트를 적용했었는데 다시 기본 폰트로 돌아가 있었다.
