--- a/_posts/2016-12-15-AirPods-출시.md
+++ b/_posts/2016-12-15-AirPods-출시.md
@@ -5,7 +5,7 @@ tags:
  - apple
 ---
 
-기다리고 기다리던 AirPods가 어제 14일 출시된 모양입니다. [애플인사이더 기사](http://appleinsider.com/articles/16/12/14/airpods-unboxed-apples-other-new-wearable-of-the-future)
+기다리고 기다리던 AirPods가 어제 14일 출시된 모양입니다. [(애플인사이더 기사)](http://appleinsider.com/articles/16/12/14/airpods-unboxed-apples-other-new-wearable-of-the-future) 아뇨 저 말고요, 사려고 벼르고 있던 사람들요.
 
 W1칩셋을 탑재하고 iOS10, macOS 10.12 또는 watchOS 3 이상을 탑재한 기기에 연결하여 사용할 수 있고, 같은 iCloud 계정으로 로그인한 기기 사이에는 연결 전환이 자유롭다는군요. 광학 센서로 착용 여부를 감지하고 탭탭으로 시리를 불러낼 수 있으며 볼륨이나 곡넘김 기능은 지원하지 않는다고 합니다. 자주 쓰던 기능인데 아쉽네요.
 
