deprecated post hidden

--- a/_posts/2016-11-19-횡스크롤이 작동하지 않는 문제.md
+++ b/_posts/2016-11-19-횡스크롤이 작동하지 않는 문제.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 횡스크롤에 윈도우가 어는 현상
+published: false
 ---
 
 10.10 Yosemite 이후로 맥북 에어에서 간간이 두 손가락 횡스크롤을 하면 윈도우가 얼어버리는 현상이 있곤 했다. 10.12 Sierra에 들어와서는 좀 덜한가 싶었는데 이번에는 맥 미니에서 같은 증상이 나타났다.  안 되겠다 싶어서 구글링을 좀 해봤다. 그 중 한 방법이 통해서 적어놓는다.
