--- a/_posts/2016-12-15-Noto_Sans.md
+++ b/_posts/2016-12-15-Noto_Sans.md
@@ -10,3 +10,5 @@ tags:
 Noto Sans를 포기하고 Spoqa Han Sans를 적용했다. 덕분에 글자 불러오는 딜레이가 길어지긴 했지만 일단 임시방편으로나마 막아 놓을 수 있었다. 시험 끝나면 제대로 고쳐놓아야 할 것 같다.
 
 ~~그런데 딜레이가 조금 많이 길다ㅡㅡ?~~
+
+2016-12-19 Spoqa Han Sans 웹폰트 서브셋으로 변경
