--- a/_posts/2017-01-10-IRC-접속하기.md
+++ b/_posts/2017-01-10-IRC-접속하기.md
@@ -3,7 +3,7 @@ layout: post
 title: IRC 접속하기
 ---
 
-모 커뮤니티에서 채팅방 대용으로 IRC를 이용하려는 모양이다. 안드로이드를 기준으로 IRC 접속하는 법을 적어놓는다. 윈도우즈와 iOS 역시 별반 다르지 않다. 맥을 쓰는 사람이 나이라 놈 빼고 또 있을지는 모르겠으나 대동소이하다. 서버 이름 `apink.hanirc.org`와 채널 앞에 `#`을 붙이는 것만 기억하면 된다.
+모 커뮤니티에서 채팅방 대용으로 IRC를 이용하려는 모양이다. 안드로이드를 기준으로 IRC 접속하는 법을 적어놓는다. 윈도우즈와 iOS 역시 별반 다르지 않다. 맥을 쓰는 사람이 [나이라 놈](https://twitter.com/Naira_ps) 빼고 또 있을지는 모르겠으나 대동소이하다. 서버 이름 `apink.hanirc.org`와 채널 앞에 `#`을 붙이는 것만 기억하면 된다.
 안드로이드에서 쓴 클라이언트는 [HoloIRC](https://play.google.com/store/apps/details?id=com.fusionx.lightirc&rdid=com.fusionx.lightirc)이다. [윈도우즈는 모르겠고](http://lmgtfy.com/?q=best+windows+irc+client) iOS와 macOS에서는 [LimeChat](https://play.google.com/store/apps/details?id=com.fusionx.lightirc&rdid=com.fusionx.lightirc)을 쓰고 있다.
 
 ![](http://d.pr/i/DFlp+){: .center-image }
