원본 항목을 찾을 수 없기 때문에

--- a/_posts/2016-12-20-VLC에서-자막이-나오지-않는-문제.md
+++ b/_posts/2016-12-20-VLC에서-자막이-나오지-않는-문제.md
@@ -2,7 +2,7 @@
 layout: post
 title: VLC에서 자막이 나오지 않는 문제
 tags: 
- - troubleshoot
+ - troubleshooting
 ---
 
 VLC에서 영상을 재생하는데에 자막이 있음에도 나타나지 않는 문제가 있었다.
