--- a/_posts/2017-01-10-IRC-접속하기.md
+++ b/_posts/2017-01-10-IRC-접속하기.md
@@ -19,7 +19,7 @@ title: IRC 접속하기
 ### 확인할 사항
 
 - Server Title
-  - 서버 이름을 적어주는 곳이다. 사실 뭐라고 적어도 상관없지만 [HanIRC](http://www.hanirc.org) 서버이니 HanIRC라고 적어주자. HanIRC가 궁금하다면 [나무위키](https://namu.wiki/w/HanIRC)에 포괄적인 설명이 있다. 주관적인 설명은 없는 것 같으니 링크를 걸어도 괜찮겠지
+  - 서버 이름을 적어주는 곳이다. 사실 뭐라고 적어도 상관없지만[오징어](http://ozinger.org)서버이니 오징어라고 적어주자. 한국어도 상관없다.
 - Server URL
   - 반드시 `apink.hanirc.org`를 입력해준다. UTF-8 서버라서 다른 EUC-kr 서버(예를 들어 222.122.47.78)를 입력하게 되면 클라이언트에서 읽지 못한다. 별도의 설정도 없고 ip 주소를 외우는 것보다 도메인을 외우는 게 쉬우니 위의 주소를 이용한다.
 - Nick Names
