atom 사용 간단 후기

--- a/_posts/2017-01-26-atom-사용-간단-소감.md
+++ b/_posts/2017-01-26-atom-사용-간단-소감.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Atom에서 파일 자동으로 리로드하기
+title: Atom 사용 간단 소감
 date: 2017-01-26
 ---
 얼마 전부터 친구의 추천으로 [Atom](https://atom.io) 에디터를 써보고 있습니다. 다른 무엇보다 방대한 패키지가 있다는 점이, 그리고 그럼에도 패키지를 설치함에 있어 과정에 전혀 낭비가 없다는 점이 매우 마음에 듭니다.
