--- a/_posts/2017-01-31-한-번쯤.md
+++ b/_posts/2017-01-31-한-번쯤.md
@@ -10,7 +10,7 @@ tags:
 
 그렇게 때문에 대학교에 진학하기 위해서 공부했던 한국어 문법은 몇몇 틀리기 쉬운 철자법/띄어쓰기 외에는 감에 의존해서 쓰는 경우가 많은 것 같다. 그리고 상당수는 실제로 정확하게 쓰기도 하고. 다만 이번에는 그렇지 않았기 때문에 잊지 않으려고 적어둔다.
 
-맞는지 틀린지 불확실함에도 무시하고 쓰는 띄어쓰기 중에 '한 번 쯤'이 있었다. 그냥 무시하고 세 글자 모두 띄어서 썼는데 Charles가 물어보면서 찾아보게 되었다. 결론은 먼저 말하자면 '한 번쯤'이 맞단다.
+맞는지 틀린지 불확실함에도 무시하고 쓰는 띄어쓰기 중에 '한 번 쯤'이 있었다. 그냥 무시하고 세 글자 모두 띄어서 썼는데 Charles가 물어보면서 찾아보게 되었다. **결론부터 먼저 말하자면 '한 번쯤'이 맞단다.**
 
 > 한 번에서 한- 은 수관형사로 띄어 쓰는 것이 바른 표기입니다.
 > <p style="text-align:right;"><a href="http://tip.daum.net/question/54915917">다음 tip</a></p>
