--- a/_posts/2017-02-02-test.md
+++ b/_posts/2017-02-02-test.md
@@ -4,7 +4,7 @@ title: "test"
 date: "2017-02-02 17:08"
 menu: private
 published: false
-url: /testest
+permalink: /testest
 ---
 
 > This post is experimental
