--- a/_posts/2017-03-18-파일-형식-찾기-file-.md
+++ b/_posts/2017-03-18-파일-형식-찾기-file-.md
@@ -2,6 +2,7 @@
 layout: "post"
 title: "파일 형식 찾기 <i>file<i>"
 date: "2017-03-18 10:48"
+published: false
 ---
 
 흔한 일은 아니지만 가끔 파일의 속성이 확장자와 맞지 않은 경우가 있다. wav 파일이 mp3 확장자를 달고 있다거나 m3u 파일이 mp4 확장자를 달고 있다거나. 이런 경우에는 문제가 생긴다. iTunes에 파일이 자동으로 들어가지 않는다거나[^itunes] VLC에서 재생해도 재생 전체 시간이 나오지 않는다거나.
