--- a/_posts/2017-03-18-파일-형식-찾기-file-.md
+++ b/_posts/2017-03-18-파일-형식-찾기-file-.md
@@ -1,6 +1,6 @@
 ---
 layout: "post"
-title: "파일 형식 찾기 <i>file<i> "
+title: "파일 형식 찾기 <i>file<i> 명령어"
 date: "2017-03-18 10:48"
 published: true
 ---
