--- a/_posts/2017-03-18-파일-형식-찾기-file-.md
+++ b/_posts/2017-03-18-파일-형식-찾기-file-.md
@@ -22,3 +22,8 @@ file 파일명
 ![](http://d.pr/i/Q2rl+)
 
 `file` 명령어는 파일 헤더에 있는 숫자를 분석해서 파일의 속성을 결정한다.
+
+------
+
+- via [LifeHacker](http://lifehacker.com/296423/determine-file-types-from-the-terminal)
+
