search google by image

--- a/_posts/2017-03-20-구글-이미지-검색.md
+++ b/_posts/2017-03-20-구글-이미지-검색.md
@@ -20,7 +20,7 @@ date: "2017-03-20 03:25"
 >
 > 좌표는 메세지나 댓글로 남겨주시면 보내드립니다
 
-via [Vingle](https://www.vingle.net/posts/2026724){.via}
+via [Vingle](https://www.vingle.net/posts/2026724){:.via}
 
 이게 말인지 방군지, 추천을 할 거면 추천을 하고 댓글 구걸을 할 거면 댓글 구걸을 할 것이지 구차하게 둘 다 하려는 놈 욕을 트럭으로 하고 싶다마는 멍청한 놈을 타산지석 삼아 새로운 기술을 하나 배워보자.
 
