search google by image

--- a/_posts/2017-03-20-구글-이미지-검색.md
+++ b/_posts/2017-03-20-구글-이미지-검색.md
@@ -6,21 +6,20 @@ date: "2017-03-20 03:25"
 
 이런 쓰레기 같은 글을 싸는 인간이 있어서 적음.
 
-> <미국시계> 시계매니아인 내가 추천한다
-> 시계만 현재 14개 보유중인 사람으로서
-> 추천하나 해드려요
->
-> 빙글에 떠있길래 들어가서 찾아봤더니 가격대비 진짜 좋네
-> 원래는 10만원 후반댄데 최저가골라서 보니까 진짜 개싸다
-> 또 좋은건 스트랩도 바꿔 찰 수 있는거? 좋네
->
-> 나중에 로렉스도 차고싶지만 현재로선 가격대비 괜찮은 시계로다가
-> 많은 시계 돌려차는게 더 이득인듯진심
-> 매일매일 바꿔차는 재미있고 사람들이 물어볼때마다 뿌듯
->
-> 좌표는 메세지나 댓글로 남겨주시면 보내드립니다
-
-via [Vingle](https://www.vingle.net/posts/2026724){:.via}
+> <미국시계> 시계매니아인 내가 추천한다<br>
+> 시계만 현재 14개 보유중인 사람으로서<br>
+> 추천하나 해드려요<br>
+> <br>
+> 빙글에 떠있길래 들어가서 찾아봤더니 가격대비 진짜 좋네<br>
+> 원래는 10만원 후반댄데 최저가골라서 보니까 진짜 개싸다<br>
+> 또 좋은건 스트랩도 바꿔 찰 수 있는거? 좋네<br>
+> <br>
+> 나중에 로렉스도 차고싶지만 현재로선 가격대비 괜찮은 시계로다가<br>
+> 많은 시계 돌려차는게 더 이득인듯진심<br>
+> 매일매일 바꿔차는 재미있고 사람들이 물어볼때마다 뿌듯<br>
+> <br>
+> 좌표는 메세지나 댓글로 남겨주시면 보내드립니다<br>
+> <p style="text-align: right">via [Vingle](https://www.vingle.net/posts/2026724)</p>
 
 이게 말인지 방군지, 추천을 할 거면 추천을 하고 댓글 구걸을 할 거면 댓글 구걸을 할 것이지 구차하게 둘 다 하려는 놈 욕을 트럭으로 하고 싶다마는 멍청한 놈을 타산지석 삼아 새로운 기술을 하나 배워보자.
 
