--- a/_posts/2017-02-27-새로운-윈도우로-탭-이동.md
+++ b/_posts/2017-02-27-새로운-윈도우로-탭-이동.md
@@ -18,10 +18,12 @@ Sierra에 올라온 뒤로 Safari tab을 새로운 윈도우로 [뜯어내는tea
 
 [GeekTool로 바탕화면 위젯을 설정하](http://canorus.github.io//2016/06/25/GeekTool/)면서 바탕화면의 `defaults write com.apple.finder CreateDesktop false` 명령어를 입력한 적이 있었다. 때문에 바탕화면에 Finder 화면이 제거되어 위와 같은 상황이 나타났다.
 
+------
+
 
 ## 해결
 
-정확한 원인을 모르니 완전한 해결책은 ~~아직~~ 없고 대략 두 가지의 우회 방법workaround가 있는 것 같다.
+~~정확한 원인을 모르니 완전한 해결책은 아직 없고 대략 두 가지의 우회 방법workaround가 있는 것 같다.~~ 원인 발견.
 
 ### 다른 앱 윈도우 위로 뜯어내기
 
