watch later and safari cache delete

--- a/_posts/2017-06-05-youtube-나중에-볼-동영상-오류.md
+++ b/_posts/2017-06-05-youtube-나중에-볼-동영상-오류.md
@@ -21,7 +21,7 @@ tags:
 
 1\. uBlock, 또는 다른 모든 광고 차단 플러그인을 Chrome 설정 탭에서 비활성화
 2\. 유투브에 재접속
-3\. 캐시 삭제하고 새로고침. Chrome에서는 [Clear Cache 플러그인](https://chrome.google.com/webstore/detail/clear-cache/cppjkneekbjaeellbfkmgnhonkkjfpdn)을 추천. Safari는 [이 쪽](http://canorus.github.io)을 참고
+3\. 캐시 삭제하고 새로고침. Chrome에서는 [Clear Cache 플러그인](https://chrome.google.com/webstore/detail/clear-cache/cppjkneekbjaeellbfkmgnhonkkjfpdn)을 추천. Safari는 [이 쪽](http://canorus.github.io/2017/06/05/safari-캐시-지우기/)을 참고
 4\. 광고 차단 플러그인을 재활성화하고 캐시 삭제 후 Youtube에 재접속
 
 - - -
