--- a/_posts/2017-07-28-튜닝과-순정.md
+++ b/_posts/2017-07-28-튜닝과-순정.md
@@ -4,7 +4,7 @@ title: "튜닝의 끝은 순정"
 date: "2017-07-28 00:08"
 ---
 
-<div style="text-align:center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XonOGAiW2vU?ecver=1" frameborder="0" allowfullscreen></iframe></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XonOGAiW2vU?ecver=1" frameborder="0" allowfullscreen></iframe>
 
 튜닝의 끝은 순정이라는 말이 있답디다. 아무리 튜닝을 하더라도 결국에는 제조사에서 셋업한 순정이 가장 낫다는 걸 깨닫게 된다는 의미겠죠. 적어도 제가 받아들이는 의미는 그렇습니다.
 
