--- a/_posts/2017-07-30-화면보호기에서-로그인.md
+++ b/_posts/2017-07-30-화면보호기에서-로그인.md
@@ -14,4 +14,4 @@ tags:
 
 정확한 원인 파악이 되지 않으며 [구글에서 검색해보면](https://www.google.co.kr/search?client=safari&rls=en&q=macos+screensaver+can't+login&ie=UTF-8&oe=UTF-8&gfe_rd=cr&ei=87d9WbadFYzf8AeU-5YQ) 꽤 오래전부터 있어온 증상으로 보임. [macosx 2009년 글](https://macosx.com/threads/cant-log-back-in-after-screen-saver.307560/).
 
-위 2009년 macos 글에서 적고 있듯이 유일한 방법은 [리부팅을 하는 방법](http://canorus.github.io/맥-강제-리부팅-방법) 밖에 없음.
+위 2009년 macos 글에서 적고 있듯이 유일한 방법은 [리부팅을 하는 방법](http://canorus.github.io/2017/07/30/맥-강제-리부팅-방법/) 밖에 없음.
