--- a/_posts/2017-07-28-튜닝과-순정.md
+++ b/_posts/2017-07-28-튜닝과-순정.md
@@ -2,6 +2,7 @@
 layout: "post"
 title: "튜닝의 끝은 순정"
 date: "2017-07-28 00:08"
+published: false
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XonOGAiW2vU?ecver=1" frameborder="0" allowfullscreen></iframe>
