trying to fix layout issue

--- a/_posts/2017-07-22-길고양이로-살아간다는-것.md
+++ b/_posts/2017-07-22-길고양이로-살아간다는-것.md
@@ -2,7 +2,7 @@
 layout: "post"
 title: "길고양이로 살아간다는 것"
 date: "2017-07-22 01:06"
-published: "false"
+published: false
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xdGxPKoitYo?ecver=1" frameborder="0" allowfullscreen> </iframe>
