--- a/_posts/2017-09-01-블로그도메인.md
+++ b/_posts/2017-09-01-블로그도메인.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 블로그에 도메인을 연결했습니다
+tags: 
+ - 관리 일지
 ---
 
 github pages 기능을 응용해서 블로깅을 하고 있는데 거기에 freenom에서 받은 .cf 도메인을 연결했습니다. 생각보다 얼마 안 걸리더군요.
