--- a/_posts/2017-09-01-블로그도메인.md
+++ b/_posts/2017-09-01-블로그도메인.md
@@ -16,4 +16,8 @@ github pages 기능을 응용해서 블로깅을 하고 있는데 거기에 free
 1\. github에 가서 Repo 설정에서 custom domain - 어쩌고.cf 같은 그거 - 적어주고  
 2\. freenom에서 DNS를 github 쪽으로 돌려주면 끝납니다.
 
-대략 30분 정도 걸린 것 같은데 말이죠. 친절하게 사진까지 곁들여서 설명해주니 따라하기가 한결 쉬웠습니다.
+대략 30분 정도 걸린 것 같은데 말이죠. 친절하게 사진까지 곁들여서 설명해주니 따라하기가 한결 쉬웠습니다. 주소창이 간결하니 보기 좋군요.
+
+------
+
+~~다음 목표는 포스트 검색인걸로 (음?)~~
