edited post AGAIN

--- a/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
+++ b/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
@@ -17,7 +17,7 @@ title: Co'caine 헤드폰 이어패드 교체기
 
 ![](https://d.pr/i/aqosy+){:.center-image}
 
-덕분에 또 개척자 정신을 발휘. 지마켓에서 엉뚱한 이어패드[^1]를 주문하고 다시 주문해서 겨우 [사이즈 맞는 녀석](http://item.gmarket.co.kr/detailview/item.asp?goodscode=214956034)으로 구해왔다.[^@]
+덕분에 또 개척자 정신을 발휘. 지마켓에서 엉뚱한 이어패드[^1]를 주문하고 다시 주문해서 겨우 [사이즈 맞는 녀석](http://item.gmarket.co.kr/detailview/item.asp?goodscode=214956034)으로 구해왔다.[^2]
 
 [^1]: 다행(?)히도 이 녀석은 K518에 맞을 것 같은 사이즈다
 
