edited post third time

--- a/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
+++ b/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
@@ -21,7 +21,7 @@ title: Co'caine 헤드폰 이어패드 교체기
 
 [^1]: 다행(?)히도 이 녀석은 K518에 맞을 것 같은 사이즈다
 
-[^2]: ![](http://d.pr/i/LjAGhz+)
+[^2]: 정확한 물건은 이놈이다. http://d.pr/i/LjAGhz
 
 ![](http://d.pr/i/Tl5arm+){:.center-image}
 
