--- a/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
+++ b/_posts/2017-09-03-Co'caine-헤드폰-이어패드-교체기.md
@@ -37,4 +37,4 @@ title: Co'caine 헤드폰 이어패드 교체기
 
 ![](http://d.pr/i/YHOvyj+){:.center-image}
 
-꾸역꾸역 끝부터 돌려가면서 밀어넣으면 사진처럼 교체할 수가 있다. 원래는 검은색 이어패드로 교체하니까 훨씬 마음에 든다.
+꾸역꾸역 끝부터 돌려가면서 밀어넣으면 사진처럼 교체할 수가 있다. 원래는 흰색이었던 녀석을 검은색 이어패드로 교체하니까 훨씬 마음에 든다.
