dual display reference added

--- a/_posts/2017-10-22-macos-듀얼-디스플레이.md
+++ b/_posts/2017-10-22-macos-듀얼-디스플레이.md
@@ -11,3 +11,7 @@ date: "2017-10-22 14:16"
 알고보니 Mission Control 쪽에 관련 설정이 있더군요.
 
 시스템 환경설정 > Mission Control > 각각의 Spaces가 있는 디스플레이 체크박스를 해제하면 창 사이에 윈도우를 위치할 수 있게 됩니다.
+
+------
+
+- via [steinberg](https://helpcenter.steinberg.de/hc/en-us/articles/206693470-Mac-How-to-span-windows-across-multiple-displays)
