embed width fixed

--- a/_posts/2017-11-16-구글-닥스-if-함수-사용하기.md
+++ b/_posts/2017-11-16-구글-닥스-if-함수-사용하기.md
@@ -14,7 +14,7 @@ tags:
 > 1. 값을 입력하기 전에는 아무 표시도 하지 않을 것
 > 2. 값을 입력하면 자동으로 산출할 것
 
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSptI8K-WF6Odp3hy5WbcZIrgogwqq32V4EZC-cG5uc-S1jQ270sqBOHltB_GDoSz-j7mICgW1FLEe4/pubhtml?gid=0&single=true" height="300px"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSptI8K-WF6Odp3hy5WbcZIrgogwqq32V4EZC-cG5uc-S1jQ270sqBOHltB_GDoSz-j7mICgW1FLEe4/pubhtml?gid=0&single=true" width="100%" height="300px"></iframe>
 
 
 - 외국환 값이 입력되*면* 한국 원화로 표시되기를 원했기 때문에 이 때는 `NOT()`을 썼다.
