--- a/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
+++ b/_posts/2016-10-30-Fileicon을-이용하여-앱-아이콘을-자동으로-변경하기.md
@@ -44,7 +44,7 @@ tags:
 
 3\. `open .`을 입력하여 Finder 창을 열고 에디터로 파일을 열어서[^editor] 아래 내용을 복사해 붙여넣습니다.
 
-```plist
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
