tweetbot and twitterrific

--- a/_posts/2016-12-15-AirPods-출시.md
+++ b/_posts/2016-12-15-AirPods-출시.md
@@ -2,7 +2,7 @@
 layout: post
 title: AirPods 출시
 tags: 
- - apple
+ - Apple
 ---
 
 기다리고 기다리던 AirPods가 어제 14일 출시된 모양입니다. [(애플인사이더 기사)](http://appleinsider.com/articles/16/12/14/airpods-unboxed-apples-other-new-wearable-of-the-future) 아뇨 저 말고요, 사려고 벼르고 있던 사람들요.
