--- a/_posts/2017-08-30-알프레드-날짜-포맷팅.md
+++ b/_posts/2017-08-30-알프레드-날짜-포맷팅.md
@@ -2,7 +2,7 @@
 layout: post
 title: Alfred Snippet - 날짜와 시간 포맷팅
 tags:
- - alfred
+ - Alfred
 ---
 
 ![](https://www.alfredapp.com/help/features/clipboard/dynamic-placeholders/system-prefs-date-time.png){:.center-image}*image from Alfred Blog*
