--- a/_posts/2017-02-14-baba-yaga.md
+++ b/_posts/2017-02-14-baba-yaga.md
@@ -2,6 +2,7 @@
 layout: "post"
 title: "Baba Yaga"
 date: "2017-02-14 23:48"
+menu: "private"
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RNBTNaqSP0I?ecver=1" frameborder="0" allowfullscreen> </iframe>
