--- a/_posts/2018-01-14-아이폰x-개인적인-리뷰.md
+++ b/_posts/2018-01-14-아이폰x-개인적인-리뷰.md
@@ -35,7 +35,7 @@ tags:
 
 TouchID의 단점은 손에 물이 묻거나 비는 손이 없으면 잠금을 해제할 수 없다는 점입니다. FaceID는 확실히 이 부분에서 강점이 있지요. 대신 FaceID는 마스크를 쓰는 등 얼굴의 일부를 가리는 경우에는 쓸 수 없습니다. 지난 번에 감기 때문에 실험을 해보니 마스크를 인중 언저리까지 올려도 인식을 하더군요. 그 이상은 힘든 것 같습니다. 여기까지는 쌤쌤이죠.
 
-그런데 FaceID는 적외선이 들어오는 상황에서는 쓸 수 없다고 니다. 태양을 등지로는 못 쓴다는 뜻이죠. 그리고 지문과 다르게 얼굴은 수시로 모양이 변합니다. 미묘하게 말이죠. 누워있다거나 잠을 잘못 자서 얼굴이 부으면 인식률이 확 떨어집니다. 겨울에 마스크를 쓰는 경우는 아예 말할 가치조차 없습니다. 책상 위에 아이폰을 놓고 있는데 알림이 오면 내용을 확인하기 위해서 그 위로 얼굴을 숙여야 합니다. 다른 사람에게 잠시 보여주고 나면 인식 실패가 누적되면서 FaceID가 비활성화되고 결국 비밀번호를 누르게 하죠. 페더리기가 무대에서 당했던 것처럼요. 계속 인공지능으로 얼굴을 학습하지만 iOS 버전을 올리고 나면 다시 처음부터 학습을 시켜야 합니다. 결코 달가운 상황이 아닙니다.
+그런데 FaceID는 적외선이 들어오는 상황에서는 쓸 수 없다고 니다. 태양을 등지고는 못 쓴다는 뜻이죠. 그리고 지문과 다르게 얼굴은 수시로 모양이 변합니다. 미묘하게 말이죠. 누워있다거나 잠을 잘못 자서 얼굴이 부으면 인식률이 확 떨어집니다. 겨울에 마스크를 쓰는 경우는 아예 말할 가치조차 없습니다. 책상 위에 아이폰을 놓고 있는데 알림이 오면 내용을 확인하기 위해서 그 위로 얼굴을 숙여야 합니다. 다른 사람에게 잠시 보여주고 나면 인식 실패가 누적되면서 FaceID가 비활성화되고 결국 비밀번호를 누르게 하죠. 페더리기가 무대에서 당했던 것처럼요. 계속 인공지능으로 얼굴을 학습하지만 iOS 버전을 올리고 나면 다시 처음부터 학습을 시켜야 합니다. 결코 달가운 상황이 아닙니다.
 
 잠금해제 속도가 느리다는 불평도 있던데 그건 아이폰에 조금 억울한 감이 있습니다. 알림 내용이 1차적으로 가려지고 얼굴을 대야 내용을 확실할 수 있다보니 잠금 해제는 동작이 한 단계 더 필요한 거죠. 만약 얼굴이 인식되면 자동으로 잠금해제가 되도록 했으면 잠금화면에서 알림 내용을 못 보게 했다고 불평했을겁니다.
 
@@ -59,12 +59,7 @@ iOS 7으로 넘어가면서 스큐어모피즘을 갖다버린 후부터 iOS의 
 
 블루투스 연결이 간당간당하는 것도 불만입니다. MacID나 mi band처럼 블루투스를 이용하는 앱이 백그라운드에서 죽는 상황이 계속 발생하는 거죠.
 
-가장 큰 문제는 아이폰X에서 독에서 폴더 생성이 안 된다는 겁니다. 결국 1\. 독에 있는 아이콘을 홈화면으로 꺼낸다 2\. 홈화면에서 아이콘을 겹쳐 폴더를 만든다. 3\. 폴더를 다시 독에 집어넣는다 의 세 단계를 거쳐야 합니다. 원래는 한 단계로 되는 작업을 말이죠.
-
-<video height="562px" autoplay loop>
-  <soure src="/Resources/2018-01-14/iphone dock folder bug.mov">
-  Browser not supported
-</video>
+가장 큰 문제는 아이폰X에서 독에서 폴더 생성이 안 된다는 겁니다. [\[영상\]](/Resources/2018-01-14/iphone dock folder bug.mov) 결국 1\. 독에 있는 아이콘을 홈화면으로 꺼낸다 2\. 홈화면에서 아이콘을 겹쳐 폴더를 만든다. 3\. 폴더를 다시 독에 집어넣는다 의 세 단계를 거쳐야 합니다. 원래는 한 단계로 되는 작업을 말이죠.
 
 
 ## 소재
