--- a/_posts/2018-02-25-촬영-세팅을-바꿨습니다.md
+++ b/_posts/2018-02-25-촬영-세팅을-바꿨습니다.md
@@ -4,7 +4,7 @@ title: "촬영 세팅을 바꿨습니다"
 date: "2018-02-25 08:53"
 ---
 
-<p style="text-align:center"><div <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bYfDKaKmPZI?rel=0&amp;showinfo=0&amp;ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+<p style="text-align:center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bYfDKaKmPZI?rel=0&amp;showinfo=0&amp;ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
 
 <br/><br/>
 
