alfred-2do post edited

--- a/_posts/2018-01-19-alfred-2do.md
+++ b/_posts/2018-01-19-alfred-2do.md
@@ -6,6 +6,10 @@ tags:
   - Alfred
 ---
 
+## 2018-03-24 업데이트
+
+날짜 입력에 오류가 있어서 수정했습니다.
+
 ## 2018-03-19 업데이트
 
 최근에 이런저런 일로 바빠서 한동안 이 쪽에 손을 못 대고 있었는데 어제 homebrew를 업데이트했더니 python3의 경로가 바뀌었습니다. 덕분에 워크플로우가 깨졌죠. 그냥 설치하고 바로 사용하기 어려워졌다는 뜻입니다.
