--- a/_posts/2018-04-11-day-one-버그-영구-저장소.md
+++ b/_posts/2018-04-11-day-one-버그-영구-저장소.md
@@ -6,7 +6,7 @@ tags:
   - troubleshooting
 ---
 
-![managed object model version](/images/2018-04-11/managed-object.png)
+![managed object model version](/images/2018-04-11/managed-object.png){:.center-image}
 
 언제부턴가 컴퓨터를 재부팅하면 이런 메세지가 나옴. 다행히 책갈피 아이콘이 Day One에서만 쓰는 거라 어떤 녀석이 문제를 일으키는 건지는 쉽게 파악을 했는데 문제는 왜 이런 에러를 발생시키는지에 대한 설명이 없음. 한 컴퓨터에서만 그러면 컴퓨터 문제거나 설정의 문제겠거니 하겠지만 맥미니와 맥북 에어에서 동시다발적으로 이런 에러가 나타나는 걸로 보아서는 뭔가 제작 단계에서 문제가 있었다고 밖에는 상상이 가지 않는 상황.
 
